# pea_projekt_1

./: CMakeLists.txt  README.md  main.cpp
src/algorithms/: BFSolver.cpp  BFSolver.h  NNSolver.cpp  NNSolver.h  RANDSolver.cpp  RANDSolver.h  RNNSolver.cpp  RNNSolver.h
src/core/: App.cpp  App.h  FileManager.cpp  FileManager.h  Graph.cpp  Graph.h
src/include/: ISolver.cpp  ISolver.h  algorithms.h  helpers.cpp  helpers.h
